# avion2

./: CMakeLists.txt  Cargo.toml  README.md
src/: flight_computer.rs  main.rs
src/config/: mod.rs
src/data_logger/: mod.rs
src/engine/: mod.rs
src/navigation/: mod.rs
src/safety/: mod.rs
src/sensors/: analog.rs  barometer.rs  gps.rs  imu.rs  mod.rs  pressure.rs  temperature.rs
src/state_machine/: mod.rs
src/telemetry/: mod.rs
